--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <title>CV</title>
 </head>
-<body style="background-color: gray;">
+<body style="background-color: #808080;">
     <div class="Head" style="text-align: center;">
         <h1>CV</h1>
         <p>En esta pagina encontraras informacion relacionada a mi persona, desde mi desarrollo profecional, hasta mis hobbies y pasatiempos!</p></div>
